--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-popout": "^0.5.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "react-select": "^1.0.0-beta13",
